fix spacing below character import panel

--- a/src/css/_tabs.scss
+++ b/src/css/_tabs.scss
@@ -668,6 +668,7 @@
 			flex-direction: column;
 			align-items: center;
 			gap: 5px;
+			margin-bottom: 15px;
 		
 			input[type=text] {
 				width: 177px;
